Added  - a FAB to insert a new laptime  - a component to see all the laptimes  - a component to register a new laptime

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -73,6 +73,11 @@
         <div id="inner-sidenav-content">
             <!-- Used by children paths -->
             <router-outlet></router-outlet>
+
+            <!-- FAB to register a new time -->
+            <button mat-fab color="accent" (click)="goToNew()" *ngIf="showNewFAB" id="newFAB">
+                <mat-icon>add</mat-icon>
+            </button>
         </div>
 
     </mat-sidenav-container>
