--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -114,3 +114,9 @@ mat-sidenav {
 	color: rgba(0, 0, 0, 0.54);
 	margin-left: 16px;
 }
+
+#newFAB {
+	position: fixed;
+	right: 16px;
+	bottom: 16px;
+}
