Added a paginator. Times are shown using a pipe

--- a/src/app/components/times/times.component.css
+++ b/src/app/components/times/times.component.css
@@ -1,18 +1,22 @@
 @media screen and (min-width: 960px) {
-    #table {
+    #tableContainer {
         margin: 16px auto;
     }
 }
 
 @media screen and (max-width: 959px) {
-    #table {
+    #tableContainer {
         margin: 16px 8px 0 8px;
         width: calc(100% - 16px);
     }
 
     /* It will be applied to th and td inside the table (but not on the last one) */
-    #table th:not(:last-child),
-    #table td:not(:last-child) {
+    #tableContainer th:not(:last-child),
+    #tableContainer td:not(:last-child) {
         padding-right: 16px;
     }
+}
+
+#tableContainer table {
+    width: 100%;
 }
