--- a/src/app/components/times/times.component.html
+++ b/src/app/components/times/times.component.html
@@ -1,41 +1,45 @@
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 restrictedPage" id="table">
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.index}} </td>
-    </ng-container>
+<div class="mat-elevation-z8 restrictedPage" id="tableContainer">
+    <table mat-table [dataSource]="dataSource" matSort>
+        <!-- Position Column -->
+        <ng-container matColumnDef="position">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
+            <td mat-cell *matCellDef="let element"> {{element.index}} </td>
+        </ng-container>
 
-    <!-- Car name Column -->
-    <ng-container matColumnDef="carName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Car Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.car.name}} </td>
-    </ng-container>
+        <!-- Car name Column -->
+        <ng-container matColumnDef="carName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Car Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.car.name}} </td>
+        </ng-container>
 
-    <!-- Track name Column -->
-    <ng-container matColumnDef="trackName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Track Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.track.name}} </td>
-    </ng-container>
+        <!-- Track name Column -->
+        <ng-container matColumnDef="trackName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Track Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.track.name}} </td>
+        </ng-container>
 
-    <!-- Track length Column -->
-    <ng-container matColumnDef="trackLength">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Track Length (m) </th>
-        <td mat-cell *matCellDef="let element"> {{element.track.length}} </td>
-    </ng-container>
+        <!-- Track length Column -->
+        <ng-container matColumnDef="trackLength">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Track Length (m) </th>
+            <td mat-cell *matCellDef="let element"> {{element.track.length}} </td>
+        </ng-container>
 
-    <!-- LapTime -->
-    <ng-container matColumnDef="lapTime">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Lap Time </th>
-        <td mat-cell *matCellDef="let el"> {{el.humanTime.minutes}}:{{el.humanTime.seconds}}:{{el.humanTime.millisecs}} </td>
-    </ng-container>
+        <!-- LapTime -->
+        <ng-container matColumnDef="lapTime">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Lap Time </th>
+            <td mat-cell *matCellDef="let el"> {{el.time.millisecs | lapTime }} </td>
+        </ng-container>
 
-    <!-- Lap Number -->
-    <ng-container matColumnDef="lapNumber">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Lap Number </th>
-        <td mat-cell *matCellDef="let el"> {{el.lap}} </td>
-    </ng-container>
+        <!-- Lap Number -->
+        <ng-container matColumnDef="lapNumber">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Lap Number </th>
+            <td mat-cell *matCellDef="let el"> {{el.lap}} </td>
+        </ng-container>
 
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
