--- a/src/app/components/times/times.component.html
+++ b/src/app/components/times/times.component.html
@@ -1,4 +1,8 @@
 <div class="mat-elevation-z8 restrictedPage" id="tableContainer">
+    <mat-form-field id="searchField">
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
+
     <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
         <!-- Position Column -->
         <ng-container matColumnDef="index">
