Moved the not found message to the main path

--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,6 +1,8 @@
-<h1>
-	Page not found :(
-</h1>
-<h2>
-	<a href="/">Return to home</a>
-</h2>
+<div id="container">
+	<h1>
+		Page not found :(
+	</h1>
+	<h2>
+		<a onclick="return false;" (click)="goToHome()" id="returnToHome">Return to home</a>
+	</h2>
+</div>
