--- a/src/app/components/times/times.component.html
+++ b/src/app/components/times/times.component.html
@@ -46,4 +46,7 @@
     </table>
 
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+
+    <!-- Refresh button -->
+    <button mat-raised-button color="primary" class="mat-elevation-z8" id="refreshBtn" (click)="refresh()">Refresh</button>
 </div>
