--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -4,7 +4,7 @@
 </div>
 <div mat-dialog-actions align="end">
     <div *ngIf="data.cancelBtn">
-        <button mat-button (click)="onCancelClick()">{{data.cancelBtn.text}}</button>
+        <button mat-button color="primary" (click)="onCancelClick()">{{data.cancelBtn.text}}</button>
     </div>
-    <button mat-button (click)="onDoClick()" cdkFocusInitial>{{data.doActionBtn.text}}</button>
+    <button mat-button color="primary" (click)="onDoClick()" cdkFocusInitial>{{data.doActionBtn.text}}</button>
 </div>
