Show message when update is available

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -75,6 +75,9 @@
         </mat-toolbar>
 
         <div id="inner-sidenav-content">
+            <!-- An empty div used to open and close the sidenav on swipe -->
+            <div (swipeleft)="closeSidenav()" (swiperight)="openSidenav()" style="width: 64px; position: absolute; height: 100%;"></div>
+
             <!-- Used by children paths -->
             <router-outlet></router-outlet>
 
