--- a/src/app/components/times/times.component.html
+++ b/src/app/components/times/times.component.html
@@ -4,6 +4,20 @@
     </mat-form-field>
 
     <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
+        <!-- Checkboxes to delete a saved lap time -->
+        <ng-container matColumnDef="select">
+            <th mat-header-cell *matHeaderCellDef>
+                <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+                    [indeterminate]="selection.hasValue() && !isAllSelected()">
+                </mat-checkbox>
+            </th>
+            <td mat-cell *matCellDef="let row">
+                <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+                    [checked]="selection.isSelected(row)">
+                </mat-checkbox>
+            </td>
+        </ng-container>
+
         <!-- Position Column -->
         <ng-container matColumnDef="index">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
@@ -50,3 +64,9 @@
     <!-- Refresh button -->
     <button mat-raised-button color="primary" class="mat-elevation-z8" id="refreshBtn" (click)="refresh()">Refresh</button>
 </div>
+
+
+<!-- FAB to delete a time -->
+<button mat-fab color="accent" (click)="showCheckboxes()" *ngIf="deleteFAB.show" id="deleteFAB">
+    <mat-icon>{{deleteFAB.icon}}</mat-icon>
+</button>
