--- a/src/app/components/settings/settings.component.css
+++ b/src/app/components/settings/settings.component.css
@@ -3,12 +3,20 @@
         width: 53%;
         margin: auto auto auto auto;
     }
+
+    .settingsSelect {
+        width: 100px;
+    }
 }
 
 @media screen and (max-width: 959px) {
     .restrictedPage {
         width: 100%;
         margin: auto auto auto auto;
+    }
+
+    .settingsSelect {
+        width: 50px;
     }
 }
 
@@ -18,4 +26,10 @@
 
 .disabledOption {
     color: #bdbdbd;
+}
+
+.secondaryText {
+    word-wrap: break-word; 
+    white-space: pre-wrap; 
+    margin-right: 10px;
 }
