--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -6,12 +6,19 @@
                 <mat-list-item *ngIf="!setting.isDivider && !setting.isSubheader" class="noSelect" [class.disabledOption]="setting.isDisabled">
                     <mat-icon matListIcon>{{ setting.icon }}</mat-icon>
                     <h3 matLine> {{setting.text}} </h3>
-                    <p matLine style="word-wrap: break-word; white-space: pre-wrap; margin-right: 10px;">{{setting.secondaryText}}</p>
+                    <p matLine class="secondaryText">{{setting.secondaryText}}</p>
 
-                    <mat-checkbox *ngIf="setting.type == 'checkbox'" 
+                    <mat-checkbox *ngIf="setting.type === 'checkbox'" 
                         formControlName="{{setting.formControlName}}"></mat-checkbox>
-                    <mat-slide-toggle *ngIf="setting.type == 'toggle'" 
+                    <mat-slide-toggle *ngIf="setting.type === 'toggle'" 
                         formControlName="{{setting.formControlName}}"></mat-slide-toggle>
+
+                    <mat-select *ngIf="setting.type === 'select'" [(value)]="setting.defualtValue" 
+                        formControlName="{{setting.formControlName}}" class="settingsSelect">
+                        <mat-option *ngFor="let val of setting.values" [value]="val.value">
+                            {{val.viewValue}}
+                        </mat-option>
+                    </mat-select>
                 </mat-list-item>
 
                 <mat-divider *ngIf="setting.isDivider"></mat-divider>
