--- a/src/app/components/new-time/new-time.component.css
+++ b/src/app/components/new-time/new-time.component.css
@@ -15,3 +15,15 @@
         display: block;
     }
 }
+
+mat-error {
+    display: none;
+}
+
+mat-error:first-child {
+    display: block;
+}
+
+#saveBtn {
+    margin-top: 8px;
+}
