--- a/src/app/components/new-time/new-time.component.html
+++ b/src/app/components/new-time/new-time.component.html
@@ -110,7 +110,7 @@
             </mat-form-field>
         </div>
 
-        <button mat-flat-button color="accent" (click)="save()" 
+        <button mat-flat-button color="accent" (click)="save()" id="saveBtn"
             [disabled]="!newLapTimeFG.valid || disableSaveButton">Save!</button>
     </div>
 </div>
