--- a/src/app/components/times/times.component.css
+++ b/src/app/components/times/times.component.css
@@ -1,3 +1,9 @@
+#tableContainer #refreshBtn {
+    float: right;
+    margin-right: 8px;
+    margin-top: 16px;
+}
+
 @media screen and (min-width: 960px) {
     #tableContainer {
         margin: 16px auto;
@@ -19,6 +25,11 @@
     #tableContainer th:last-child {
         padding-right: 8px;
     }
+
+    /* This will prevent the FAB to hover on the refresh button */
+    #tableContainer #refreshBtn {
+        margin-bottom: 96px;
+    }
 }
 
 #tableContainer {
@@ -39,12 +50,6 @@ th.mat-sort-header-sorted {
     margin-right: 16px;
     margin-top: 16px;
     width: calc(100% - 32px);
-}
-
-#tableContainer #refreshBtn {
-    float: right;
-    margin-right: 8px;
-    margin-top: 16px;
 }
 
 #deleteFAB {
