--- a/src/app/components/new-time/new-time.component.html
+++ b/src/app/components/new-time/new-time.component.html
@@ -91,8 +91,23 @@
             </mat-form-field>
         </div>
 
-        <app-lap-assists description="Select the used assists (if any)"></app-lap-assists>
-        
+        <mat-accordion class="fullPage">
+            <mat-expansion-panel>
+                <!-- Header -->
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        Assists
+                    </mat-panel-title>
+                    <mat-panel-description>
+                        Select the used assists (if any)
+                    </mat-panel-description>
+                </mat-expansion-panel-header>
+
+                <!-- Content -->
+                <app-lap-assists></app-lap-assists>
+            </mat-expansion-panel>
+        </mat-accordion>
+
         <button mat-flat-button color="accent" (click)="save()" id="saveBtn"
             [disabled]="!newLapTimeFG.valid || disableSaveButton">Save!</button>
     </div>
