The lap assists component now returns values

--- a/src/app/components/new-time/new-time.component.html
+++ b/src/app/components/new-time/new-time.component.html
@@ -104,7 +104,7 @@
                 </mat-expansion-panel-header>
 
                 <!-- Content -->
-                <app-lap-assists></app-lap-assists>
+                <app-lap-assists formControlName="assists"></app-lap-assists>
             </mat-expansion-panel>
         </mat-accordion>
 
