--- a/src/app/components/settings-assists/settings-assists.component.html
+++ b/src/app/components/settings-assists/settings-assists.component.html
@@ -7,7 +7,7 @@
 
     <div class="sameLine centered" id="buttonRow">
         <button mat-button color="primary" (click)="discard()">Discard changes</button>
-        <button mat-flat-button color="accent" (click)="save()">Save</button>
+        <button mat-flat-button color="accent" (click)="save()" [disabled]="disableSaveBtn">Save</button>
     </div>
     
 </div>
