--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -49,7 +49,7 @@
 
         <!-- Toolbar to show when user is on the home page -->
         <mat-toolbar color="primary" *ngIf="deviceType == 'desktop' || toolbarToShow == toolbarTypes.sidenav">
-            <button mat-icon-button (click)="sidenav.open()">
+            <button mat-icon-button role="navigation" aria-label="Open sidenav menu" (click)="sidenav.open()">
                 <mat-icon>menu</mat-icon>
             </button>
 
@@ -60,14 +60,14 @@
 
             <span style="flex: 1 1 auto;"></span>
 
-            <button mat-icon-button (click)="doLogout()">
+            <button mat-icon-button role="button" aria-label="Logout" (click)="doLogout()">
                 <mat-icon>exit_to_app</mat-icon>
             </button>
         </mat-toolbar>
 
         <!-- Toolbar to show when user changes page -->
         <mat-toolbar color="primary" *ngIf="deviceType == 'mobile' && toolbarToShow == toolbarTypes.back">
-            <button mat-icon-button (click)="goBack()">
+            <button mat-icon-button role="navigation" aria-label="Go to the previous page"  (click)="goBack()">
                 <mat-icon>arrow_back</mat-icon>
             </button>
 
@@ -81,10 +81,11 @@
             <div (swipeleft)="closeSidenav()" (swiperight)="openSidenav()" id="sidenavOpener"></div>
 
             <!-- Used by children paths -->
-            <router-outlet></router-outlet>
+            <router-outlet role="main"></router-outlet>
 
             <!-- FAB to register a new time -->
-            <button mat-fab color="accent" (click)="goToNew()" *ngIf="showNewFAB" id="newFAB">
+            <button mat-fab color="accent" role="navigation" aria-label="Save a new lap time" 
+                (click)="goToNew()" *ngIf="showNewFAB" id="newFAB">
                 <mat-icon>add</mat-icon>
             </button>
         </div>
