--- a/src/app/components/times/times.component.html
+++ b/src/app/components/times/times.component.html
@@ -48,10 +48,14 @@
             <td mat-cell *matCellDef="let el"> {{el.time.millisecs | lapTime }} </td>
         </ng-container>
 
-        <!-- Lap Number -->
-        <ng-container matColumnDef="lap">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Lap Number </th>
-            <td mat-cell *matCellDef="let el"> {{el.lap}} </td>
+        <!-- Lap Details -->
+        <ng-container matColumnDef="more">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button (click)="showDetails(element)">
+                    <mat-icon>open_in_new</mat-icon>
+                </button>
+            </td>
         </ng-container>
 
 
