- Added a new component to show LapTime details  - Added a readonly property in the lap-time component  - Added a readonly property in the lap-assists component  - Moved sameLine class to styles.css file
*Todo*:  Add a loading spinner and show error messages

--- a/src/styles.css
+++ b/src/styles.css
@@ -53,6 +53,15 @@
         box-shadow: rgba(0, 0, 0, 0.14902) 0px 1px 1px 0px, rgba(0, 0, 0, 0.09804) 0px 1px 2px 0px;
     }
 
+    .sameLine {
+        display: flex;
+        vertical-align: middle;
+        margin-top: 8px;
+    }
+
+    .sameLine mat-form-field:not(:last-child) {
+        margin-right: 8px;
+    }
 }
 
 @media screen and (max-width: 959px) {
@@ -71,6 +80,9 @@
         box-shadow: rgba(0, 0, 0, 0.14902) 0px 1px 1px 0px, rgba(0, 0, 0, 0.09804) 0px 1px 2px 0px;
     }
 
+    .sameLine {
+        display: block;
+    }
 }
 
 md-form-field {
