--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,12 @@
 @font-face {
     font-family: "Roboto", sans-serif;
     font-display: auto;
-    src: local("Roboto", sans-serif), url(https://fonts.gstatic.com/s/roboto/v19/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
+    /* https://fonts.gstatic.com/s/roboto/v19/KFOmCnqEu92Fr1Mu4mxK.woff2 */
+    src: local("Roboto", sans-serif), url("https://fonts.googleapis.com/css?family=Roboto") format('woff2');
+}
+
+* {
+    font-family: "Roboto", sans-serif;
 }
 
 .noSelect {
