Added a loading spinner

--- a/src/app/components/lap-time-details/lap-time-details.component.html
+++ b/src/app/components/lap-time-details/lap-time-details.component.html
@@ -1,3 +1,5 @@
+<app-loading-spinner *ngIf="showLoadingSpinner"></app-loading-spinner>
+
 <div class="mat-elevation-z8 form centered" id="lapTimeDetails">
     <p>Lap time details</p>
 
