--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,4 +6,6 @@
 		Please use one of the following providers to sign in
 	</p>
 </div>
-<firebase-ui *ngIf="isBrowser"></firebase-ui>
+<ng-container *ngIf="isBrowser">
+	<firebase-ui></firebase-ui>
+</ng-container>
